--- a/config.env.example
+++ b/config.env.example
@@ -1,20 +1,17 @@
-APP_NAME="captive-portal"
-APP_ENV="dev"
-APP_HOST=127.0.0.1
-APP_PORT=8080
+APP_ENV=dev
 APP_GRACEFUL_TIMEOUT_SECOND=1
-APP_LOG_LEVEL="debug"
+APP_HOST=127.0.0.1
+APP_LOG_LEVEL=debug
+APP_NAME=captive-portal
+APP_PORT=8080
 
-OPENWRT_ENCRYPTION_KEY="YOUR_ENCRYPTION_KEY_IN_OPENNDS"
+DATABASE_URL=postgres://postgres:example@localhost:5432/captive-portal?sslmode=disable
 
-REDIS_HOST=localhost
-REDIS_PORT=6379
+NEWRELIC_LICENSE_KEY=
+
+OPENWRT_ENCRYPTION_KEY=
+
 REDIS_DB=0
-REDIS_PASSWORD="password"
-
-DB_HOST=localhost
-DB_PORT=5432
-DB_USER="username"
-DB_NAME="db name"
-DB_PASSWORD="password"
-DB_SSL_MODE="require"
+REDIS_HOST=127.0.0.1
+REDIS_PASSWORD=
+REDIS_PORT=6370
